# mssql-utilities

./: CMakeLists.txt  README.md  Toolchain-mingw32.cmake  config.h.in  mssql-attach.cpp
.github/workflows/: ccpp.yml
